--- a/DATN-FE/package.json
+++ b/DATN-FE/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.2",
     "chart.js": "^4.4.0",
     "gsap": "^3.12.1",
+    "lodash.debounce": "^4.0.8",
     "pinia": "^2.0.23",
     "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.41",
@@ -28,6 +29,7 @@
     "vue-axios": "3.5.0",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.5",
+    "vue-select": "^4.0.0-beta.6",
     "vue-sweetalert2": "^5.0.5",
     "vue-toast-notification": "^3.1.2",
     "vue-toastification": "^2.0.0-rc.5"
