--- a/DATN-FE/.env
+++ b/DATN-FE/.env
@@ -1,4 +1,4 @@
-VITE_APP_BASE_URL=http://3.225.88.245:81/api/
-VITE_APP_FILE_URL=http://3.225.88.245:81/api/storage/
+VITE_APP_BASE_URL=http://fallenangel.click/api/
+VITE_APP_FILE_URL=http://fallenangel.click/api/storage/
 # VITE_APP_BASE_URL=http://127.0.0.1:8000/api/
 # VITE_APP_FILE_URL=http://127.0.0.1:8000/storage/
